--- a/sharkss/scss/main.scss
+++ b/sharkss/scss/main.scss
@@ -1,14 +1,28 @@
 
 @keyframes move{
     0%{
-        background-position: 0%;
+        background-position: 0px;
     }
 
     100%{
-        background-position: 50%;
+        background-position: 20px;
     }
 }
 
+
+@keyframes bk{
+    0%{
+        background: rgba(0,0,0,0.8);
+    }
+    25%{
+        background: rgba(0,0,0,0.2);
+    }
+
+    100%{
+        background: rgba(0,0,0,0.8);
+    }
+}
+$bgTime: 60s;
 *{
     margin:0;
     padding: 0;
@@ -27,6 +41,37 @@
     background-size: cover;
 
     transition: 2s;
-    animation: move 5s;
-    animation-iteration-count: 5;
+    animation: move $bgTime;
+    animation-iteration-count: infinite;
+}
+
+#blackCurtain{
+    background: rgba(0,0,0,0.2);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    animation: bk $bgTime;
+    animation-iteration-count: infinite;
+}
+
+#info{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    #navbar{
+        align-items: flex-end;
+        align-content: flex-end;
+        display: flex;
+        width: 55vw;
+        height: 85vh;
+        justify-content: space-around;
+
+            *{
+                color: white;
+            }
+    }      
 }
