--- a/sharkss/scss/main.scss
+++ b/sharkss/scss/main.scss
@@ -1,9 +1,12 @@
 @import "fn";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 
 *{
     margin:0;
     padding: 0;
     overflow: hidden;
+    font-family: 'Open Sans Condensed', sans-serif;
+    
 }
 #head{
     width: 100vw;
@@ -60,24 +63,14 @@
                 justify-content: center;
                 width: 100%;
                 transition: 0.5s;
-                font-size: 1.05em;
+                font-size: 1.205em;
+                letter-spacing: 3px;
             }
-            .item p::before{
-                content: ' ';
-                z-index: 0;
-                position: absolute;
-                top: 80vh ;
-                width: 2%;
-                display: flex;
-                justify-content: center;
-                border-bottom: 1px solid white;
-                transition: 0.5s;
-                padding: 0 0 1.15em 0em;
-            }
-            .item p:hover::before{
+
+            .item p:hover{
+                
                 text-decoration: underline;
-                border-bottom: 1px solid white;
-                width: 10%;
             }
+            
     }      
 }
