--- a/sharkss/scss/_fn.scss
+++ b/sharkss/scss/_fn.scss
@@ -1,14 +1,14 @@
 @keyframes move{
 
     0%{
-        background-position: 0px;
+        background-position: 1%;
     }
     25%{
-        background-position: 5px;
+        background-position: 5%;
     }
 
     100%{
-       background-position: 20px;
+       background-position: 25%;
     }
 }
 
@@ -17,6 +17,9 @@
     0%{
         background: rgba(0,0,0,1);
     }
+    5%{
+        background: rgba(0,0,0,0.6);
+    }
     25%{
         background: rgba(0,0,0,0.2);
     }
@@ -24,9 +27,21 @@
     80%{
         background: rgba(0,0,0,0.8);
     }
-    90%{
+    98%{
+        background: rgba(0,0,0,0.6);
+    }
+    100%{
         background: rgba(0,0,0,1);
     }
 }
 
-$bgTime: 12s;
+@keyframes bkChange{
+    0%{
+        
+    }
+    
+    100%{
+        background: rgba(0,0,0,1);
+    }
+}
+$bgTime: 20s;
