--- a/sharkss/scss/main.scss
+++ b/sharkss/scss/main.scss
@@ -20,9 +20,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    transition: 2s;
     animation: move $bgTime;
     animation-iteration-count: infinite;
+
 }
 
 #blackCurtain{
@@ -35,9 +35,21 @@
 
     pointer-events: none;
 
+    transition: 1s;
+
+}
+
+.fadeBlack{
     animation: bk $bgTime;
     animation-iteration-count: infinite;
 }
+
+.changePage{
+    animation: bkChange 0.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards
+}
+
 
 #info{
     width: 100vw;
