--- a/sharkss/scss/main.scss
+++ b/sharkss/scss/main.scss
@@ -12,6 +12,7 @@
     width: 100vw;
     height: 100vh;
     background: black;
+    position: relative;
 }
 #splash{
     background-image: url("https://images.pexels.com/photos/726478/pexels-photo-726478.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
@@ -34,6 +35,7 @@
     pointer-events: none;
 
     transition: 1s;
+    z-index: 2;
 
 }
 
@@ -41,9 +43,12 @@
     animation: bk $bgTime;
     animation-iteration-count: infinite;
 }
+.fadeWhite{
+    opacity: 0;
+}
 
 .changePage{
-    animation: bkChange 0.5s;
+    animation: bkChange 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards
 }
@@ -81,4 +86,11 @@
             }
             
     }      
+}
+
+#body{
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    background: rgba(20,10,0,0.9);
 }
