--- a/sharkss/css/main.css
+++ b/sharkss/css/main.css
@@ -93,9 +93,33 @@
       text-decoration: underline; }
 
 #body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: relative;
-  background: rgba(20, 10, 0, 0.9); }
+  background: #0a0a00; }
+
+#body1 {
+  width: 100vw;
+  height: 100vh; }
+  #body1 * {
+    color: white; }
+  #body1 #titleDiv {
+    width: 100%;
+    display: flex;
+    justify-content: center; }
+    #body1 #titleDiv h1 {
+      font-weight: 700;
+      letter-spacing: 10px; }
+  #body1 #origin {
+    display: flex;
+    width: 100%;
+    height: 35%; }
+  #body1 #factsList {
+    width: 100%;
+    height: 85%;
+    align-items: center;
+    display: flex; }
+    #body1 #factsList ul {
+      align-self: flex-start; }
 
 /*# sourceMappingURL=main.css.map */
