--- a/sharkss/scss/main.scss
+++ b/sharkss/scss/main.scss
@@ -89,8 +89,43 @@
 }
 
 #body{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background: rgba(10,10,0,1);
+}
+
+#body1{
     width: 100vw;
     height: 100vh;
-    position: relative;
-    background: rgba(20,10,0,0.9);
+
+    *{
+        color: white;
+    }
+    
+    #titleDiv{
+        width:100%;
+        display: flex;
+        justify-content: center;
+        h1{
+            font-weight: 700;
+            letter-spacing: 10px;
+        }
+    }
+    #origin{
+        display: flex;
+        width: 100%;
+        height: 35%;
+    }
+    #factsList{
+        width: 100%;
+        height: 85%;
+        align-items: center;
+        display: flex;
+
+        ul{
+            align-self: flex-start;
+            
+        }
+    }
 }
