--- a/sharkss/css/main.css
+++ b/sharkss/css/main.css
@@ -109,16 +109,33 @@
     justify-content: center; }
     #body1 #titleDiv h1 {
       font-weight: 700;
-      letter-spacing: 10px; }
+      letter-spacing: 10px;
+      text-decoration: underline; }
   #body1 #origin {
     display: flex;
     width: 100%;
-    height: 35%; }
+    height: 35%;
+    flex-direction: column;
+    padding: 1vh 2vw; }
+    #body1 #origin #subTitle {
+      width: 100%;
+      height: 50%;
+      display: flex;
+      justify-content: center;
+      align-content: center; }
+    #body1 #origin #OBody p {
+      font-size: 1.25em; }
+    #body1 #origin #o_img {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: flex-end; }
   #body1 #factsList {
+    display: flex;
     width: 100%;
-    height: 85%;
-    align-items: center;
-    display: flex; }
+    height: 35%;
+    flex-direction: column;
+    padding: 1vh 2vw; }
     #body1 #factsList ul {
       align-self: flex-start; }
 
