--- a/sharkss/css/main.css
+++ b/sharkss/css/main.css
@@ -109,8 +109,9 @@
     justify-content: center; }
     #body1 #titleDiv h1 {
       font-weight: 700;
-      letter-spacing: 10px;
-      text-decoration: underline; }
+      letter-spacing: 5px;
+      text-decoration: underline;
+      color: rgba(245, 254, 240, 0.9); }
   #body1 #origin {
     display: flex;
     width: 100%;
@@ -136,7 +137,16 @@
     height: 35%;
     flex-direction: column;
     padding: 1vh 2vw; }
-    #body1 #factsList ul {
-      align-self: flex-start; }
+    #body1 #factsList #f_subTitle {
+      width: 100%;
+      height: 50%;
+      display: flex;
+      justify-content: center;
+      align-content: center; }
+    #body1 #factsList #f_OBody {
+      width: 100%; }
+      #body1 #factsList #f_OBody ul {
+        display: flex;
+        justify-content: flex-end; }
 
 /*# sourceMappingURL=main.css.map */
