--- a/sharkss/scss/main.scss
+++ b/sharkss/scss/main.scss
@@ -109,8 +109,9 @@
         justify-content: center;
         h1{
             font-weight: 700;
-            letter-spacing: 10px;
+            letter-spacing: 5px;
             text-decoration: underline;
+            color: rgba(245,254,240,0.9);
         }
     }
     #origin{
@@ -147,10 +148,22 @@
         height: 35%;
         flex-direction: column;
         padding: 1vh 2vw;
+        #f_subTitle{
+            width: 100%;
+            height: 50%;
+            display: flex;
+            justify-content: center;
+            align-content: center;
 
-        ul{
-            align-self: flex-start;
-            
         }
+        #f_OBody{
+            width: 100%;
+            ul{
+                display: flex;
+                justify-content: flex-end;
+                
+            }
+        }
+        
     }
 }
