--- a/sharkss/css/main.css
+++ b/sharkss/css/main.css
@@ -29,7 +29,6 @@
 * {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: 'Open Sans Condensed', sans-serif; }
 
 #head {
@@ -78,6 +77,7 @@
     display: flex;
     width: 55vw;
     height: 85vh;
+    margin-bottom: 15vh;
     justify-content: space-around; }
     #info #navbar .item a {
       color: white;
