--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,13 @@
   100% {
     height: 80vh;
     background-position-y: 15%; } }
+@keyframes openNotHome {
+  0% {
+    height: 100vh;
+    background-position-y: 5%; }
+  100% {
+    height: 20vh;
+    background-position-y: 65%; } }
 * {
   padding: 0;
   margin: 0;
@@ -22,9 +29,41 @@ body {
   background-repeat: no-repeat;
   background-size: full;
   width: 100%;
-  height: 100vh;
+  height: 100vh; }
+
+.NotHome {
+  animation: openNotHome 0.5s;
+  animation-fill-mode: forwards; }
+
+.Home {
   animation: open 0.5s;
   animation-fill-mode: forwards; }
+
+#quiz {
+  width: 95%;
+  height: 105%;
+  background: rgba(240, 222, 220, 0.4);
+  border: solid 2px rgba(10, 2, 10, 0.1);
+  display: flex;
+  box-sizing: border-box;
+  flex-flow: column;
+  padding: 1vh 1vw; }
+  #quiz .row {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row; }
+    #quiz .row div {
+      margin: 1vh 1vw; }
+  #quiz .cardQuiz {
+    width: 30%;
+    height: 45vh;
+    background: rgba(30, 10, 131, 0.1);
+    border: dotted 1px rgba(10, 2, 10, 0.2); }
+
+#body center {
+  padding: 5vh 0px; }
 
 .STnav {
   background: #22313F;
@@ -46,6 +85,9 @@ body {
   .STnav li.allow:hover {
     background: #2C3E50;
     transition: 0.5s; }
+
+.NavSelected {
+  background: rgba(10, 2, 10, 0.5); }
 
 #IsolateBar {
   height: 12vh;
