--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,9 +21,49 @@ body{
     
     width: 100%;
     height: 100vh;
+    
+}
+.NotHome{
+    animation: openNotHome 0.5s;
+    animation-fill-mode: forwards;
+}
+.Home{
+    
     animation: open 0.5s;
     animation-fill-mode: forwards;
+}
+
+#quiz{
+    width: 95%;
+    height: 105%;
+    background: rgba(240,222,220,0.4);
+    border: solid 2px rgba(10,2,10,0.1);
+    display: flex;
+    box-sizing: border-box;
+    flex-flow: column;
+    padding: 1vh 1vw;
+    .row{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        
+        justify-content: space-between;
+        flex-flow: row;
+        div{
+            margin: 1vh 1vw;
+        }
+    }
+
+    .cardQuiz{
+        width: 30%;
+        height: 45vh;
+        background: rgba(30,10,131,0.1);
+        border: dotted 1px rgba(10,2,10,0.2);
+    }
     
+}
+#body center{
+    padding: 5vh 0px;
 }
 .STnav{
     background: #22313F;
@@ -50,8 +90,8 @@ body{
         transition: 0.5s;
     }
 }
-.dropDown{
-    
+.NavSelected{
+    background: rgba(10,2,10,0.5);
 }
 #IsolateBar{
     height: 12vh;
