--- a/scss/_fn.scss
+++ b/scss/_fn.scss
@@ -1,19 +1,22 @@
-/*@import url('https://fonts.googleapis.com/css?family=Ubuntu');*/
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300');
 
 @keyframes open{
     0%{
-        height: 100vh;
-        background-position-y: 5%;
+        //height: 100vh;
+        height: 80vh;
+        background-position-y: -20%;
     }
     100%{
         height: 80vh;
-        background-position-y: 15%;
+        background-position-y: 5%;
     }
 }
 
 @keyframes openNotHome{
     0%{
-        height: 100vh;
+        //height: 100vh;
+        height: 20vh;
         background-position-y: 5%;
     }
     100%{
