--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,31 +5,32 @@
     margin:  0;
     font-family: 'Ubuntu';
 }
-
-body{
-    background: #89C4F4;
+#head{
+    *{
+        font-family: 'Montserrat', sans-serif;
+    }
 }
+
 
 #SharkBK{
     background-image: url("https://images2.alphacoders.com/813/81302.jpg");
-
-    height: 100%; 
+ 
     background-attachment: fixed;
     background-position-y: 0%;
     background-repeat: no-repeat;
     background-size: full;
     
     width: 100%;
-    height: 100vh;
-    
 }
 .NotHome{
-    animation: openNotHome 0.5s;
+    height:20vh;
+    animation: openNotHome 2s;
     animation-fill-mode: forwards;
 }
 .Home{
     
-    animation: open 0.5s;
+    height:80vh;
+    animation: open 2s;
     animation-fill-mode: forwards;
 }
 
@@ -42,22 +43,62 @@ body{
     box-sizing: border-box;
     flex-flow: column;
     padding: 1vh 1vw;
+    *{
+        transition: 2.2s;
+    }
+    .selected{
+        background: rgba(15,5,110,0.3);
+        font-size: 1.2em;
+        transition: 0.2s;
+        *{
+            transition: 0.2s;
+
+        }
+    }
+    .quizQuestion{
+        background: rgba(10,2,10,0.2);
+        padding: 2.5% 0px;
+        font-size: 1.15em;
+        
+    }
+    .quizOptions{
+        width: 100%;
+        height: 98%;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        cursor: pointer;
+        div{
+            flex: 1 0 48%; /* explanation below */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            text-align: center;
+            padding: 10% 0%;
+
+        }
+        div:not(.selected):hover{
+            background: rgba(58, 83, 155, 0.25);
+            transition: 0.2s;
+        }
+    }
     .row{
         width: 100%;
         height: 100%;
         display: flex;
         
-        justify-content: space-between;
+        justify-content: space-around;
         flex-flow: row;
-        div{
-            margin: 1vh 1vw;
-        }
+        align-items: flex-start;
+        
     }
 
     .cardQuiz{
+        margin: 5vh 0vw;
         width: 30%;
-        height: 45vh;
-        background: rgba(30,10,131,0.1);
+        height: 100%;
+        background: rgba(30, 139, 195, 0.4);
         border: dotted 1px rgba(10,2,10,0.2);
     }
     
@@ -66,55 +107,174 @@ body{
     padding: 5vh 0px;
 }
 .STnav{
-    background: #22313F;
     display: flex;
-    height: 8vh;
-    width: 100%;
-    justify-content: space-around;
-    border-bottom: 2px solid rgba(10,2,10,0.5);
+    background: rgb(89, 171, 227);
+    border-bottom: 2px solid rgba(10,2,10,0.2);
+    position: relative;
+    top: 0;
+    *{
+        transition: 0.2s;
+    }
+    .dropdown {
+        position: relative;
+    }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        top: calc( 8vh + 7px );
+        left: 0;
+        width: 100%;
+        a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            
+        }
+
+        a:hover {
+            background-color: #f1f1f1
+        }
+    }
+    
+    .dropdown:hover .dropdown-content{
+        display: block;
+        *{
+            color: black;
+
+        }
+    }
     li{
+        list-style: none;
         display: flex;
+        flex:1;
+    }
+    li a{
+        height: 8vh;
+        display: flex;
+
         padding: 5px 10px;
         flex:1;
         justify-content: center;
         transition: 0.25s;
         align-items: center;
+        cursor: pointer;
     }
     li *{
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        text-decoration: none;
         font-size: 1.25em;
-        color: rgb(240,240,235);
+        color: rgba(240,240,235,0.6);
     }
     
     li.allow:hover{
         background: #2C3E50;
-        transition: 0.5s;
+        transition: 0.15s;
+        *{
+            transition: 0.15s;
+            color: rgba(250,240,245,0.9);
+
+        }
     }
 }
 .NavSelected{
-    background: rgba(10,2,10,0.5);
+    background: rgba(10,2,10,0.1);
+    color: rgba(250,255,245,0.85);
 }
 #IsolateBar{
     height: 12vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgba(245, 250, 240, 0.8);
     font-style: italic;
     font-size: 0.9em;
     text-decoration: underline;
-    background: #34495E;
+    background: rgba(51, 110, 123, 0.3);
     border-bottom: 1px solid rgba(10,2,10,0.5);
     border-top: 1px solid rgba(10,2,10,0.5);
     letter-spacing: 1.75px;
 }
-
+#navbarPlace{
+    height:8vh;
+    width:100%;
+}
+.hideBar{
+    display: none;
+}
+.showBar{
+    display: block;
+}
 body{
-    height: 200vh;
+    background: #89C4F4;
+    height: 100%;
+    #list{
+        list-style: square;
+    }
+    #introBody{
+        display: flex;
+        width: 75%;
+        justify-content: center;
+    }
     #info{
-        height: 10vh;
+        height: 100%;
         margin: 2vh 2vw;
-        padding: 0vh 2vw;
-        background: rgba(255,255,255,0.1);
+        .cardInfo:hover{
+            background: rgba(255,255,255,0.2);
+            border-radius: 15px;
+            transition: 0.2s;
+            
+        
+        }
+        .cardInfo{
+            text-align: center;
+            transition: 1s;
+            margin: 5vh 0vw;
+            padding: 2vh 2vw;
+            background: rgba(245,250,245,0.1);
+            width: 40%;
+            h1{
+                padding: 2vh 0vw;
+            }
+            p{
+                padding: 1vh 2vw;
+            }
+        }
+
+        #infoTwo{
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            
+        }
     }
 
+} 
+
+#foot{
+    height: 50vh;
+    background: rgb(34, 49, 63);
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(240, 222, 220, 0.836);
+    h3{
+        padding: 5vh 2vw;
+    }
+    p{
+        margin: 0.5vh 0vw;
+    }
+}
+
+#b_Body{
+    width: 90%;
+    p{
+        padding: 3vh 0vw;
+    }
 }
